# Tools7

./: CMakeLists.txt  README.md
ArteryPartsSegmentation/: ArteryPartsSegmentation.py  CMakeLists.txt  README.md
ArteryPartsSegmentation/Resources/UI/: ArteryPartsSegmentation.ui
BodyIsolation/: BodyIsolation.py  CMakeLists.txt  README.md
BodyIsolation/Resources/UI/: BodyIsolation.ui
FlipViewPoint/: CMakeLists.txt  FlipViewPoint.py  README.md
FlipViewPoint/Resources/UI/: FlipViewPoint.ui
GuidedVeinSegmentation/: GuidedVeinSegmentation.py  README.md
MarkupsToSurface/: CMakeLists.txt  MarkupsToSurface.py  README.md
MarkupsToSurface/Resources/UI/: MarkupsToSurface.ui
Silhouette/: CMakeLists.txt  README.md  Silhouette.py
Silhouette/Resources/UI/: Silhouette.ui
TemplateROICrop/: CMakeLists.txt  README.md  TemplateROICrop.py
